--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>A JavaScript Calculator</h1>
     <div id="calculator">
         <div id="output">
-            <div data-previous-operand class="previous-operand">12</div>
-            <div data-current-operand class="current-operand">34</div>
+            <div data-previous-operand class="previous-operand">12 +</div>
+            <div data-current-operand class="current-operand">5</div>
         </div>
         <p id="button row">
             <button data-delete class="delete">DEL</button>
@@ -40,7 +40,7 @@
             <button data-number class="number">9</button>
         </p>
         <p id="button row">
-            <button data-operation class="operand">/</button>
+            <button data-operation class="operand">÷</button>
             <button data-operation class="operand">%</button>
             <button data-number class="number">.</button>
             <button data-number class="number">0</button>
